# simple_calculator

./: CMakeLists.txt  README.md
include/: operations.h
logger/: CMakeLists.txt  README.md
logger/src/: basic_logger.cpp
src/: division.cpp  main.cpp  multiplication.cpp  subtraction.cpp
